# Iguanas

./: .coverage  .coverage.LM-LDF-41562912.pid97144.Xqj9sHAx.HNQIp837rWOh  .coverage.LM-LDF-41562912.pid97146.XP4ZeQix.HBTilMcPzybh  .coverage.LM-LDF-41562912.pid97154.XsDahGOx.HiF5EKSe08yh  .coverage.LM-LDF-41562912.pid97155.X6f6bRmx.HNQIp837rWOh  .coverage.LM-LDF-41562912.pid97156.XlUL88Kx.Hy17HYeqH4Ih  .coverage.LM-LDF-41562912.pid97159.XaXG8uBx.HQ5EFHxnbWrh  .gitignore  CONTRIBUTING.md  README.md  api_reference.html  bench.csv  examples.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  run_all_tests.sh  run_tests_non_spark.sh  run_tests_spark.sh  search.html  searchindex.js  setup.py  sitemap.xml
.github/workflows/: build-ci.yml  build.yml  metrics.py  publish-to-pypi.yml  python-app.yml
.ruff_cache/0.8.0/: 5753734205249346693
_modules/: index.html
_modules/iguanas/: metrics.html  monotone_constraints.html  rule_analysis.html  rule_classifier.html  rule_combination.html  rule_evaluation.html  rule_formatting.html  rule_generation.html  rule_selection.html  ruleset_classifier.html  weight_transformations.html
_sources/: api_reference.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt
_sources/api/: rule_classifier.rst.txt  rule_generation.rst.txt
_sources/examples/: titanic_survival_example.ipynb.txt  titanic_survival_example_with_preprocessing.ipynb.txt
api/: metrics.html  monotone_constraints.html  rule_analysis.html  rule_classifier.html  rule_combination.html  rule_evaluation.html  rule_formatting.html  rule_generation.html  rule_selection.html  ruleset_classifier.html  weight_transformations.html
docs/: index.html  objects.inv  run_doc.sh  search.html  searchindex.js
docs/_modules/: index.html
docs/about_the_project/: index.html
docs/api/: correlation_reduction.html  index.html  metrics.html  pipeline.html  rbs.html  rule_application.html  rule_generation.html  rule_optimisation.html  rule_scoring.html  rule_selection.html  rules.html  space.html  utils.html
docs/examples/: index.html
docs/install/: index.html
docs/source/: api_reference.rst  conf.py  examples.rst  index.rst  installation.rst
docs/user_guide/: index.html
examples/: titanic_survival_example.html  titanic_survival_example.ipynb  titanic_survival_example_with_preprocessing.html  titanic_survival_scikit-learn_api_example.html  titanic_survival_scikit-learn_api_example.ipynb
iguanas/: metrics.py  monotone_constraints.py  rule_analysis.py  rule_classifier.py  rule_combination.py  rule_evaluation.py  rule_formatting.py  rule_generation.py  rule_selection.py  ruleset_classifier.py  weight_transformation.py  weight_transformations.py
iguanas/correlation_reduction/: agglomerative_clustering_reducer.py
iguanas/metrics/: classification.py  pairwise.py  unsupervised.py
iguanas/pipeline/: _base_pipeline.py  class_accessor.py  linear_pipeline.py  parallel_pipeline.py
iguanas/rbs/: rbs_optimiser.py  rbs_pipeline.py
iguanas/rule_application/: rule_applier.py
iguanas/rule_generation/: _base_generator.py  rule_generator_dt.py  rule_generator_dt_spark.py  rule_generator_opt.py
iguanas/rule_optimisation/: _base_optimiser.py  bayesian_optimiser.py  direct_search_optimiser.py
iguanas/rule_scoring/: rule_score_scalers.py  rule_scorer.py  rule_scoring_methods.py
iguanas/rule_selection/: _base_filter.py  bayes_search_cv.py  correlated_filter.py  greedy_filter.py  simple_filter.py
iguanas/rules/: _convert_rule_dicts_to_rule_strings.py  _convert_rule_lambdas_to_rule_strings.py  _convert_rule_strings_to_rule_dicts.py  convert_processed_conditions_to_general.py  rules.py
iguanas/tests/: test_metrics.py  test_monotone_constraints.py  test_rule_analysis.py  test_rule_classifiers.py  test_rule_combination.py  test_rule_evaluation.py  test_rule_formating.py  test_rule_generation.py  test_rule_prettifier.py  test_rule_selection.py  test_ruleset_generation.py  test_weight_transformation.py  test_weight_transformations.py
iguanas/utils/: types.py  (+2 more)
notebooks/: submission_titanic.csv  titanic_survival_example.ipynb  titanic_survival_example_with_preprocessing.ipynb
run_doc/: autodoc.sh
(+144 files in other folders)
