[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "iguanas"
dynamic = ["version"]
description = "Lightning fast rule generation library"
authors = [
    {name = "Charles Poli", email = "cpoli@paypal.com"},
    {name = "Shreekanthadatta Seligar", email = "seligar@paypal.com"},
    {name = "James Laidler"}
]
maintainers = [
    {name = "Charles Poli", email = "cpoli@paypal.com"},
    {name = "Shreekanthadatta Seligar", email = "seligar@paypal.com"},
    {name = "James Laidler"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [ "data-science", "machine-learning", "rule generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=2.0.0",  # 2.0.0 needed for py3.10 compatibility
    "polars>=1.0.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.0.0",
    "xgboost>=3.2.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.2.0",
    "mypy>=2.1.0",
    "nbsphinx>=0.9.0",
]
notebook = [
    "ipykernel>=7.2.0",
    "jupyter>=1.0.0",
]
all = ["iguanas[dev,notebook]"]

[project.urls]
Homepage = "https://github.com/paypal/iguanas"
Repository = "https://github.com/paypal/iguanas"
Documentation = "https://github.com/paypal/iguanas"
"Bug Tracker" = "https://github.com/paypal/iguanas/issues"


[tool.hatch.build.targets.wheel]
packages = ["iguanas"]

[tool.hatch.build]
exclude = [
    "notebooks/",
    "iguanas/*/tests/",
    "data/",
    "doc_data/",
    "htmlcov/",
    "*.ipynb",
    "__pycache__/",
    "docs/"
]

[tool.hatch.version]
path = "iguanas/__init__.py"

# Black code formatter
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# isort import sorter
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/tests/*", "*/data/*"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["iguanas/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=iguanas",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# MyPy type checker
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "notebooks/",
    "data/",
]

# Ruff linter (faster alternative to flake8, pylint)
[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.coverage.run]
source = ["iguanas"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
